# create_contract_api

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  foundry.toml
.github/workflows/: test.yml
abi/: AhoyToken.json
contracts/: AhoyToken.sol
src/: main.rs
test/: AhoyToken.t.sol
