[package]
name = "create_contract_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.1"
serde = "1.0.188"
eyre = "0.6.8"
dotenv = "0.15.0"
actix-web = "4"